# AVA

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  STYLEGUIDE.md
app/: CMakeLists.txt  main.cpp
app/shaders/: test.comp  test.frag  test.slang  test.vert  test_comp.slang
ava/: CMakeLists.txt  ava.cpp  ava.hpp  buffer.cpp  buffer.hpp  bufferLocation.hpp  commandBuffer.cpp  commandBuffer.hpp  compute.cpp  compute.hpp  creation.cpp  creation.hpp  descriptors.cpp  descriptors.hpp  frame.cpp  frame.hpp  frameBuffer.cpp  frameBuffer.hpp  framebuffer.cpp  framebuffer.hpp  graphics.cpp  graphics.hpp  ibo.cpp  ibo.hpp  image.cpp  image.hpp  memoryLocation.cpp  memoryLocation.hpp  raii.hpp  rayTracing.cpp  rayTracing.hpp  rayTracingPipeline.cpp  rayTracingPipeline.hpp  renderPass.cpp  renderPass.hpp  sampler.cpp  sampler.hpp  shaders.cpp  shaders.hpp  types.hpp  (+10 more)
ava/cmake/: avaConfig.cmake
ava/detail/: buffer.cpp  buffer.hpp  commandBuffer.cpp  commandBuffer.hpp  debugCallback.hpp  descriptors.hpp  detail.hpp  ibo.hpp  image.hpp  rayTracing.cpp  rayTracing.hpp  rayTracingPipeline.hpp  reflection.cpp  reflection.hpp  renderPass.hpp  sampler.hpp  shaders.cpp  shaders.hpp  state.hpp  utility.cpp  utility.hpp  vao.hpp  vbo.hpp  vibo.hpp  vulkan.cpp  vulkan.hpp
ava/raii/: buffer.cpp  buffer.hpp  commandBuffer.cpp  commandBuffer.hpp  compute.cpp  compute.hpp  descriptors.cpp  descriptors.hpp  frame.cpp  frame.hpp  framebuffer.cpp  framebuffer.hpp  graphics.cpp  graphics.hpp  ibo.cpp  ibo.hpp  image.cpp  image.hpp  rayTracing.cpp  rayTracing.hpp  rayTracingPipeline.cpp  rayTracingPipeline.hpp  renderPass.cpp  renderPass.hpp  sampler.cpp  sampler.hpp  shaders.cpp  shaders.hpp  types.hpp  vao.cpp  vao.hpp  vbo.cpp  vbo.hpp  vibo.cpp  vibo.hpp
cmake/: avaConfig.cmake  shaders_glslc.cmake  shaders_slang.cmake
examples/: CMakeLists.txt
examples/app/: CMakeLists.txt  main.cpp
examples/app/shaders/: test.slang
examples/cmake/: assets.cmake
examples/cube/: CMakeLists.txt  cube.slang  main.cpp
examples/deferred/: CMakeLists.txt  deferred.slang  final.slang  main.cpp
examples/framework/: CMakeLists.txt  framework.hpp
examples/imgui/: CMakeLists.txt
examples/imgui-integration/: CMakeLists.txt  main.cpp
examples/multisampled-monkeys/: CMakeLists.txt  main.cpp  multisampled-monkeys.slang
examples/pushconstants/: CMakeLists.txt  main.cpp  pushconstants.slang
examples/rayquery/: CMakeLists.txt  main.cpp  rayquery.slang
examples/raytracing/: .gitignore  CMakeLists.txt  final.slang  main.cpp  raytracing.slang
examples/tessellation/: CMakeLists.txt  main.cpp  tessellation.slang
